# mzdisk

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  README_cz.md
docs/cz/: Changelog.md  tools-mzdsk-cpm.md  tools-mzdsk-create.md  tools-mzdsk-dsk.md  tools-mzdsk-fsmz.md  tools-mzdsk-info.md  tools-mzdsk-mrs.md  tools-mzdsk-raw.md
docs/en/: Changelog.md  tools-mzdsk-cpm.md  tools-mzdsk-create.md  tools-mzdsk-dsk.md  tools-mzdsk-fsmz.md  tools-mzdsk-info.md  tools-mzdsk-mrs.md  tools-mzdsk-raw.md
src/libs/: CMakeLists.txt  baseui_compat.h
src/libs/dsk/: dsk.c  dsk.h  dsk_tools.c  dsk_tools.h
src/libs/endianity/: endianity.c  endianity.h
src/libs/generic_driver/: generic_driver.c  generic_driver.h  memory_driver.c  memory_driver.h
src/libs/mzdsk_cpm/: mzdsk_cpm.c  mzdsk_cpm.h  mzdsk_cpm_mzf.c  mzdsk_cpm_mzf.h
src/libs/mzdsk_detect/: mzdsk_detect.c  mzdsk_detect.h
src/libs/mzdsk_global/: mzdsk_global.c  mzdsk_global.h
src/libs/mzdsk_hexdump/: mzdsk_hexdump.c  mzdsk_hexdump.h
src/libs/mzdsk_ipldisk/: mzdsk_ipldisk.c  mzdsk_ipldisk.h  mzdsk_ipldisk_tools.c  mzdsk_ipldisk_tools.h
src/libs/mzdsk_mrs/: mzdsk_mrs.c  mzdsk_mrs.h
src/libs/mzdsk_tools/: mzdsk_tools.c  mzdsk_tools.h
src/libs/mzf/: mzf.c  mzf.h  mzf_tools.c  mzf_tools.h
src/libs/output_format/: output_format.c  output_format.h
src/libs/sharpmz_ascii/: sharpmz_ascii.c  sharpmz_ascii.h
src/locale/: mzdisk.pot
src/locale/cs/LC_MESSAGES/: mzdisk.po
src/locale/de/LC_MESSAGES/: mzdisk.po
src/locale/es/LC_MESSAGES/: mzdisk.po
src/locale/fr/LC_MESSAGES/: mzdisk.po
src/locale/it/LC_MESSAGES/: mzdisk.po
src/locale/ja/LC_MESSAGES/: mzdisk.po
src/locale/nl/LC_MESSAGES/: mzdisk.po
src/locale/pl/LC_MESSAGES/: mzdisk.po
src/locale/sk/LC_MESSAGES/: mzdisk.po
src/locale/uk/LC_MESSAGES/: mzdisk.po
src/mzdisk/: CMakeLists.txt  app.h  app_imgui.cpp  config.c  config.h  disk_session.c  disk_session.h  dragdrop.c  dragdrop.h  i18n.h  main.c  mzdisk.rc  texture_utils.cpp  texture_utils.h  ui_helpers.h
src/mzdisk/libs/igfd/: CustomFont.h  ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
src/mzdisk/libs/imgui/: README-ImGui.md  imgui_widgets.cpp
src/mzdisk/libs/imwidgets/: ImWidgetConfigHeader.h  ImWidgets.cpp  ImWidgets.h
src/mzdisk/libs/mz_vcode/: mz_vcode.c  mz_vcode.h
src/mzdisk/libs/mzglyphs/: mzglyphs.c  mzglyphs.h
src/mzdisk/panels/: panel_boot.c  panel_boot.h  panel_boot_imgui.cpp  panel_cpm.c  panel_cpm.h  panel_cpm_imgui.cpp  panel_create.c  panel_create.h  panel_create_imgui.cpp  panel_fsmz.c  panel_fsmz.h  panel_fsmz_imgui.cpp  panel_geometry.c  panel_geometry.h  panel_geometry_imgui.cpp  panel_hexdump.c  panel_hexdump.h  panel_hexdump_imgui.cpp  panel_info.c  panel_info.h  panel_info_imgui.cpp  panel_map.c  panel_map.h  panel_map_imgui.cpp  panel_mrs.c  panel_mrs.h  panel_mrs_imgui.cpp  panel_raw_io.c  panel_raw_io.h  panel_raw_io_imgui.cpp  panel_settings.c  panel_settings.h  panel_settings_imgui.cpp
src/tools/: CMakeLists.txt
src/tools/common/: mzdisk_cli_version.h
src/tools/mzdsk-cpm/: mzdsk_cpm.c
src/tools/mzdsk-create/: mzdsk_create.c
src/tools/mzdsk-dsk/: mzdsk_dsk.c
src/tools/mzdsk-fsmz/: mzdsk_fsmz.c
src/tools/mzdsk-info/: mzdsk_info.c
src/tools/mzdsk-mrs/: mzdsk_mrs.c
src/tools/mzdsk-raw/: mzdsk_raw.c
tests/: CMakeLists.txt  test_framework.h
tests/cli/: helpers.sh  test_create.sh  test_format.sh  test_geometry.sh  test_mzdsk_cpm_ops.sh  test_mzdsk_dsk.sh  test_mzdsk_fsmz_ops.sh  test_mzdsk_info.sh  test_mzdsk_mrs_ops.sh  test_mzdsk_raw.sh  test_readonly_preserves_file.sh  test_roundtrip.sh
tests/gui/: test_config.c  test_dragdrop.c  test_panel_boot.c  test_panel_cpm.c  test_panel_create.c  test_panel_fsmz.c  test_panel_geometry.c  test_panel_hexdump.c  test_panel_mrs.c  test_panel_raw_io.c  test_session.c
tests/libs/: test_cpm.c  test_detect.c  test_dsk_tools.c  test_endianity.c  test_fsmz.c  test_memory_driver.c  test_mrs.c  test_mzdsk_global.c  test_mzdsk_hexdump.c  test_mzdsk_tools.c  test_mzf.c  test_output_format.c  test_sharpmz_ascii.c
tools/: md2html.py
